# royal-road-longitudinal-collector

./: .env.example  .gitignore  CATALOG_CENSUS_PLAN.md  CHANGELOG.md  DATA_DICTIONARY.md  Dockerfile  IMPRESSION_EXPERIMENT.md  LAUNCH_ANALYSIS.md  LONGITUDINAL_TRACKING.md  METHODOLOGY.md  QUICK_START_GITHUB.md  README.md  install_source.py  pyproject.toml
.installer/: part00.txt  part01.txt  part02.txt  part03.txt
data/: catalog_state.example.json  catalog_state.json  external_page_traffic.example.csv  rrlab.sqlite
reports/: cadence_gate_latest.json  catalog_backfill_latest.json  catalog_backfill_output_latest.json  catalog_backfill_run_5.json  catalog_backfill_run_50.json  catalog_backfill_run_58.json  catalog_status_latest.json  exposure_analysis_20260716T201435Z.csv  exposure_analysis_20260716T201435Z.json  exposure_analysis_20260716T233815Z.csv  exposure_analysis_20260716T233815Z.json  exposure_analysis_20260717T163845Z.csv  exposure_analysis_20260717T201547Z.csv  exposure_analysis_20260717T201547Z.md  exposure_analysis_20260717T231416Z.json  exposure_analysis_20260718T202758Z.csv  exposure_analysis_20260718T202758Z.md  exposure_analysis_20260718T233715Z.csv  exposure_analysis_20260719T153244Z.json  exposure_analysis_20260719T213727Z.csv  exposure_analysis_20260720T082903Z.csv  exposure_analysis_20260720T082903Z.json  exposure_analysis_20260720T082903Z.md  exposure_analysis_20260721T094009Z.json  exposure_analysis_20260721T094009Z.md  exposure_analysis_20260721T155435Z.json  exposure_analysis_20260721T155435Z.md  exposure_analysis_20260722T000247Z.md  (+136 more)
(+58 files in other folders)
