[project]
name = "royal-road-longitudinal-collector"
version = "0.4.0"
description = "Longitudinal Royal Road discovery, catalog census and Rising Stars research collector"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.2",
  "pydantic>=2.8",
  "tenacity>=9.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.48"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.3", "ruff>=0.7"]

[project.scripts]
rrlab = "rrlab.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"rrlab/exposure.py" = ["F401"]

[tool.setuptools.packages.find]
include = ["rrlab*"]
exclude = ["data*", "tests*", "reports*"]
